[gd_scene load_steps=6 format=3 uid="uid://b46knckxjdkiq"]

[ext_resource type="PackedScene" uid="uid://cxwyhyyqufru4" path="res://scenes/UI/board/board_elements/element_base.tscn" id="1_b036v"]
[ext_resource type="Script" uid="uid://bl67smyc6mcs6" path="res://scenes/UI/board/board_elements/element_note.gd" id="2_v5rdk"]
[ext_resource type="FontFile" uid="uid://08ws45e5yv6x" path="res://fonts/test_font.otf" id="4_xg50t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gdcp7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4vmk5"]

[node name="element_note" groups=["Persistent"] instance=ExtResource("1_b036v")]
script = ExtResource("2_v5rdk")

[node name="NoteName" type="LineEdit" parent="." index="1"]
layout_mode = 0
offset_left = -98.0
offset_top = -101.0
offset_right = -12.0
offset_bottom = -65.0
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_xg50t")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_gdcp7")
placeholder_text = "Note name"
expand_to_text_length = true

[node name="NoteText" type="TextEdit" parent="." index="2"]
layout_mode = 0
offset_left = -98.0
offset_top = -61.0
offset_right = 95.0
offset_bottom = 87.0
size_flags_vertical = 3
theme_override_colors/current_line_color = Color(0, 0, 0, 0)
theme_override_colors/background_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("4_xg50t")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_4vmk5")
placeholder_text = "Note text"
wrap_mode = 1
scroll_past_end_of_file = true
